@@ -2,6 +2,7 @@
 v6.0.0-git
 ----------
 
+[mms] Fix regression in adding an attachment in minimal view.
 
 
 ---------
